--- a/app-atalaia.html
+++ b/app-atalaia.html
@@ -40,7 +40,7 @@
 <body>
 
     <header>
-        <div id="app-title" data-key="titulo_app">Guía del Huésped</div>
+        <div id="app-title" data-key="titulo_app">Guía Atalaia Terrace</div>
         <button id="lang-btn" onclick="toggleLanguage()">EN</button>
     </header>
 
