--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guía del Apartamento</title>
+    <title>Atalaia Guest App</title>
 
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="https://github.com/Goetarri/app-atalaia/manifest.json">
 
     <style>
         /* --- ESTILOS GENERALES --- */
@@ -343,7 +343,7 @@
         // --- REGISTRO DEL SERVICE WORKER (PWA) ---
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/sw.js')
+                navigator.serviceWorker.register('https://github.com/Goetarri/app-atalaia/sw.js')
                     .then(registration => {
                         console.log('ServiceWorker registrado con éxito: ', registration.scope);
                     })
