--- a/index.html
+++ b/index.html
@@ -274,13 +274,11 @@
 
             </div>
             <div id="lavadora" class="sub-section visible">
-                <div id="washer-grid" class="image-grid">
-                    </div>
-
                 <div class="text-frame">
                     <strong data-key="lavadora_titulo">Cómo usar:</strong><br>
                     <span data-key="lavadora_desc">Texto lavadora</span>
                 </div>
+                <div id="washer-grid" class="image-grid"></div>
             </div>
 
             <div id="toldo" class="sub-section">
