--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                 ['🚓', 'tel_ertzaintza', '088'], 
                 ['🚔', 'tel_municipal', '092'], 
                 ['🔥', 'tel_bomberos', '080'],
-                ['🚕', 'tel_taxi', '943 464646 /943 404040'] // Número de taxi de ejemplo
+                ['🚕', 'tel_taxi', '943 464646<br>943 404040'] // Número de taxi de ejemplo
             ];
 
             infoData.forEach(data => {
