--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                     <strong data-key="otros_titulo">Varios:</strong><br>
                     <span data-key="otros_desc">Texto otros</span>
                 </div>
-                <img data-key="otros_img" src="images/wifi.jpg" alt="FOTO OTROS" class="appliance-img wifi-img-small">
+                <img data-key="otros_img" src="images/QR_wifi.jpg" alt="FOTO OTROS" class="appliance-img wifi-img-small">
             </div>
 
             <div class="sub-btn-group">
@@ -522,7 +522,7 @@
                     <strong data-key="otros_titulo">Como conectarse al wifi:</strong><br>
                     <span data-key="otros_desc">Texto wifi.</span>
                 </div>
-                <img data-key="otros_img" src="images/wifi.jpg" alt="Código QR Wifi" class="appliance-img wifi-img-small">
+                <img data-key="otros_img" src="images/QR_wifi.jpg" alt="Código QR Wifi" class="appliance-img wifi-img-small">
             </div>
 
             <div id="info-hospitals" class="sub-section">
