--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </button>
     
     <button class="nav-item" onclick="showTab('tips-main')" data-target="tips-main">
-        <img src="images/ic_tips.png" class="nav-icon-img" alt="Tips">
+        <img src="images/ic_info.png" class="nav-icon-img" alt="Tips">
         <span data-key="nav_tips">Tips</span>
     </button>
 </nav>
