--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
                 <span data-key="btn_home_wifi">Wifi</span>
                 <span class="arrow-right">➜</span>
             </button>
+
+            <div id="owner-contact-table-container">
+                <h3 data-key="titulo_contacto_owner">Contacto</h3>
+                <span data-key="bienvenida_desc2">Texto de bienvenida2</span>
+                <table id="owner-contact-table"></table>
+            </div>
+
+            <div id="apartment-address-table-container">
+                <span data-key="bienvenida_desc3">Texto de bienvenida3</span>
+                <table id="apartment-address-table"></table> 
+            </div>
+
         </div>
 
         <div id="appliances" class="screen">
@@ -151,7 +163,7 @@
                 </button>
                 
                 <button class="menu-btn" onclick="showTipDetail('info', 'btn_menu_direcciones')">
-                    <img src="images/ic_directions.png" class="btn-icon" alt="icon">
+                    <img src="images/ic_transport.png" class="btn-icon" alt="icon">
                     <span data-key="btn_menu_direcciones">Direcciones</span>
                 </button>
                 
