--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span data-key="titulo_electro">Instrucciones</span>
                 </button>
 
-                <button class="menu-btn" onclick="showTipDetail('consejos', 'btn_menu_consejos')">
+                <button class="menu-btn" onclick="showTipDetail('consejos', 'btn_menu_consejos', 'atalaia')">
                     <img src="images/ic_tips.png" class="btn-icon" alt="icon">
                     <span data-key="btn_menu_consejos">Consejos</span>
                 </button>
@@ -275,5 +275,6 @@
     <script src="es.js"></script>
     <script src="en.js"></script>
     <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
