--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <span data-key="nav_activities">Actividades</span>
     </button>
     
-    <button class="nav-item" onclick="showTab('tips-main')" data-target="tips-main">
+    <button class="nav-item" onclick="resetToTipsMenu()" data-target="tips-main">
         <img src="images/ic_info.png" class="nav-icon-img" alt="Tips">
         <span data-key="nav_tips">Tips</span>
     </button>
