--- a/index.html
+++ b/index.html
@@ -255,6 +255,16 @@
                 <table id="hospital-table"></table>
             </div>
 
+            <div id="info-consejos" class="sub-section" style="display: none;">
+                <div class="text-frame">
+                    <h3 data-key="titulo_tips"></h3>
+                    <ul>
+                       <li data-key="tip_1">Tip 1</li>
+                       <li data-key="tip_2">Tip 2</li>
+                       <li data-key="tip_3">Tip 3</li>
+                   </ul>
+                </div>
+            </div>
             <div id="info-checkout" class="sub-section" style="display: none;">
                 <h3 data-key="checkout_title"></h3>
                 <p data-key="checkout_desc"></p>
