--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </button>
 
                 <button class="menu-btn" onclick="showTipDetail('checkout', 'btn_menu_checkout', 'atalaia')">
-                    <img src="images/ic_info.png" class="btn-icon" alt="icon">
+                    <img src="images/ic_checkout.png" class="btn-icon" alt="icon">
                     <span data-key="btn_menu_checkout">Check-out</span>
                 </button>
 
@@ -63,8 +63,13 @@
                 <!-- Change the onclick function to show your new screen (e.g., showTab('garbage-screen')) -->
                 <!-- Update the icon source and the data-key for the button text -->
                 <button class="menu-btn" onclick="showTab('garbage-screen')">
-                    <img src="images/ic_garbage.png" class="btn-icon" alt="icon">
+                    <img src="images/ic_basura.png" class="btn-icon" alt="icon">
                     <span data-key="btn_home_garbage">Basura</span>
+                </button>
+
+                <button class="menu-btn" onclick="showTab('homerules-screen')">
+                    <img src="images/ic_rules.png" class="btn-icon" alt="icon">
+                    <span data-key="btn_home_rules">Normas</span>
                 </button>
             </div>
         </div>
@@ -114,6 +119,22 @@
             <div class="text-frame">
                 <!-- Add your content here. Use unique data-keys for text and images to support multiple languages -->
                 <p data-key="garbage_desc"></p>
+            </div>
+        </div>
+
+        <div id="homerules-screen" class="screen">
+            <div class="header-row">
+                <!-- Make sure the back button's onclick takes the user back to the 'atalaia' screen -->
+                <button class="back-btn" onclick="showTab('atalaia')">
+                    <span class="arrow-icon">⬅</span> <span data-key="btn_atras"></span>
+                </button>
+                <!-- Update the data-key for the title -->
+                <h2 data-key="homerules_title">Normas de la casa</h2>
+            </div>
+            <hr>
+            <div class="text-frame">
+                <!-- Add your content here. Use unique data-keys for text and images to support multiple languages -->
+                <p data-key="homerules_desc"></p>
             </div>
         </div>
         
