--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span data-key="btn_home_instrucciones">Instrucciones</span>
                 </button>
 
-                <button class="menu-btn" onclick="showTipDetail('checkout', 'btn_menu_checkout', 'atalaia')">
+                <button class="menu-btn" onclick="showTab('checkout-screen')">
                     <img src="images/ic_checkout.png" class="btn-icon" alt="icon">
                     <span data-key="btn_menu_checkout">Check-out</span>
                 </button>
@@ -137,7 +137,28 @@
                 <p data-key="homerules_desc"></p>
             </div>
         </div>
-        
+
+        <div id="checkout-screen" class="screen">
+            <div class="header-row">
+                <!-- Back button to return to the 'atalaia' screen -->
+                <button class="back-btn" onclick="showTab('atalaia')">
+                    <span class="arrow-icon">⬅</span> <span data-key="btn_atras"></span>
+                </button>
+                <h2 data-key="btn_menu_checkout">Check-out</h2>
+            </div>
+            <hr>
+            <div class="text-frame">
+                <!-- Add your content here. Use unique data-keys for text and images to support multiple languages -->
+                <ul>
+                    <li data-key="checkout_1">Check-Out 1</li>
+                    <li data-key="checkout_2">Check-Out 2</li>
+                    <li data-key="checkout_3">Check-Out 3</li>
+                    <li data-key="checkout_4">Check-Out 4</li>
+                    <li data-key="checkout_5">Check-Out 5</li>
+                </ul>
+            </div>
+        </div>
+
         <div id="appliances" class="screen">
             <div class="header-row">
                 <!-- Este botón llevará de vuelta a la pantalla 'atalaia' -->
@@ -241,6 +262,7 @@
                     <img src="images/ic_activities.png" class="btn-icon" alt="icon">
                     <span data-key="btn_act_2">Actividad 2</span>
                 </button>
+
                 <!-- INSTRUCCIÓN: Para añadir una nueva actividad, copia y pega este bloque de botón -->
                 <!-- Cambia el '3' en showActivityDetail('3') por el nuevo número de actividad -->
                 <!-- Ver abajo como añadir la sub-seccion correspondiente al boton creado-->
@@ -248,10 +270,6 @@
                     <img src="images/ic_activities.png" class="btn-icon" alt="icon">
                     <span data-key="btn_act_3">Actividad 3</span>
                 </button>
-
-
-
-
                 <button class="menu-btn" onclick="showTipDetail('consejos', 'btn_menu_consejos', 'activities')">
                     <img src="images/ic_tips.png" class="btn-icon" alt="icon">
                     <span data-key="btn_menu_consejos">Consejos</span>
@@ -355,10 +373,7 @@
                    </ul>
                 </div>
             </div>
-            <div id="info-checkout" class="sub-section" style="display: none;">
-                <h3 data-key="checkout_title"></h3>
-                <p data-key="checkout_desc"></p>
-           </div>
+
         </div>
     </div>
 
