--- a/index.html
+++ b/index.html
@@ -134,6 +134,13 @@
             <hr>
             <div class="text-frame">
                 <p data-key="homerules_desc"></p>
+                <ul class="list-frame">
+                    <li data-key="homerules_1">Home Rules 1</li>
+                    <li data-key="homerules_2">Home Rules 2</li>
+                    <li data-key="homerules_3">Home Rules 3</li>
+                    <li data-key="homerules_4">Home Rules 4</li>
+                    <li data-key="homerules_5">Home Rules 5</li>
+                </ul>
             </div>
         </div>
 
