--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <hr>
             <div class="text-frame">
                 <p data-key="garbage_desc"></p>
+                <img data-key="garbage_img" src="images/recycle.png" alt="Recycle" class="appliance-img wifi-img-small">
             </div>
         </div>
 
@@ -172,7 +173,7 @@
                 </button>
                 <!-- Este botón llevará de vuelta al MENÚ de instrucciones. Se muestra al ver un detalle. -->
                 <button id="back-to-appliance-menu" class="back-btn" onclick="showApplianceMenu()" style="display:none;">
-                    <span class="arrow-icon">⬅</span> <span data-key="btn_atras_menu"></span>
+                    <span class="arrow-icon">⬅</span> <span data-key="btn_atras"></span>
                 </button>
                 <h2 data-key="titulo_electro">Instrucciones</h2>
             </div>
@@ -254,7 +255,7 @@
         <div id="activities" class="screen">
             <div class="header-row">
                 <button id="back-to-activities-menu" class="back-btn" onclick="backToActivitiesMenu()" style="display:none;">
-                    <span class="arrow-icon">⬅</span> <span data-key="btn_atras_menu"></span>
+                    <span class="arrow-icon">⬅</span> <span data-key="btn_atras"></span>
                 </button>
                 <h2 data-key="titulo_actividades">Actividades</h2>
             </div>
