--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <div id="app-title" data-key="titulo_app">Guía Atalaia Terrace</div>
-        <button id="lang-btn" onclick="toggleLanguage()">EN 🇬🇧</button>
+        <button id="lang-btn" onclick="toggleLanguage()">ES 🇪🇸</button>
     </header>
 
     <div class="container">
@@ -32,7 +32,6 @@
                     <table id="apartment-address-table"></table> 
                     <p data-key="bienvenida_desc3">Texto de bienvenida3</p>
                     <p style="text-align: right" data-key="bienvenida_desc4">Texto de bienvenida4</p>
-                    
                 </div>
             </div>
             
