order and clean

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                     <li data-key="homerules_4">Home Rules 4</li>
                     <li data-key="homerules_5">Home Rules 5</li>
                 </ul>
+                <p data-key="homerules_desc2"></p>
             </div>
         </div>
 
@@ -153,14 +154,15 @@
                 <h2 data-key="btn_menu_checkout">Check-out</h2>
             </div>
             <hr>
-            <div class="list-frame">
-                <ul>
+            <div class="text-frame">
+                <ul class="list-frame">
                     <li data-key="checkout_1">Check-Out 1</li>
                     <li data-key="checkout_2">Check-Out 2</li>
                     <li data-key="checkout_3">Check-Out 3</li>
                     <li data-key="checkout_4">Check-Out 4</li>
                     <li data-key="checkout_5">Check-Out 5</li>
                 </ul>
+                 <p data-key="checkout_desc"></p>
             </div>
         </div>
 
