--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <div class="vertical-menu">
                 <!-- INSTRUCTION: To add a new button, copy the block below -->
                 <!-- Change the onclick function and the data-key for the button text -->
-                <button class="menu-btn" onclick="showRestaurantCategory('pintxos')">
+                <button class="menu-btn" onclick="showTab('pintxos-screen')">
                     <img src="images/ic_pintxo.png" class="btn-icon-large" alt="icon">
                     <span data-key="btn_rest_pintxos">Pintxos</span>
                 </button>
@@ -270,6 +270,24 @@
                     <span data-key="btn_rest_cyder">Cyder Houses</span>
                 </button>
             </div>
+        </div>
+
+        <!-- ===================== PINTXOS SCREEN ===================== -->
+        <div id="pintxos-screen" class="screen">
+            <div class="header-row">
+                <button class="back-btn" onclick="showTab('restaurants')">
+                    <span class="arrow-icon">⬅</span> <span data-key="btn_atras"></span>
+                </button>
+                <h2 data-key="btn_rest_pintxos">Pintxos</h2>
+            </div>
+            <hr>
+            <!-- Map container -->
+            <div id="pintxos-map-container">
+                    <h3 data-key="mapa_titulo">Mapa</h3>
+                    <iframe id="google-map-embed-pintxos" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
+                </div>
+            <!-- Table container -->
+            <table id="pintxos-table"></table>
         </div>
         <!-- ===================== ACTIVITIES SCREEN ===================== -->
         <div id="activities" class="screen">
@@ -437,5 +455,8 @@
     <script src="es.js"></script>
     <script src="en.js"></script>
     <script src="script.js"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initPintxosMap">
+    </script>
 </body>
 </html>
