pintxos data added

--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
             <!-- Map container -->
             <div id="pintxos-map-container">
                     <h3 data-key="mapa_titulo">Mapa</h3>
-                    <iframe id="google-map-embed-pintxos" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
+                    <iframe id="google-map-embed-pintxos" width="100%";height="250" frameborder="0" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer" src=""></iframe>
                 </div>
             <!-- Table container -->
-            <table id="pintxos-table"></table>
+            <table id="pintxos-table" class="pintxos-table"></table>
         </div>
         <!-- ===================== ACTIVITIES SCREEN ===================== -->
         <div id="activities" class="screen">
